# rust-stargate

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  GNUmakefile  Makefile  Makefile.toml  OBJECT_OUTPUT_PATTERN.md  README.md  build.rs  flake.nix  test_cd.sg  test_cd2.sg  test_interactive.sh  test_ls_default.sg  test_pipeline.sh  test_readme_examples_full.sg  test_scripting.sh
.cargo/: config.toml
.github/workflows/: CICD.yml  GnuTests.yml  code-quality.yml
.github/workflows_disabled/: CICD.yml  GnuTests.yml  benchmarks.yml  freebsd.yml  fuzzing.yml  l10n.yml  openbsd.yml
docs/: PROPERTY_COMPLETION.md  USING_PROPERTY_COMPLETION.md  compiles_table.csv  compiles_table.py  json_adapter.md
docs/src/: index.md  l10n.md  performance.md  platforms.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cksum.rs  fuzz_cut.rs  fuzz_date.rs  fuzz_echo.rs  fuzz_env.rs  fuzz_expr.rs  fuzz_non_utf8_paths.rs  fuzz_parse_glob.rs  fuzz_parse_size.rs  fuzz_parse_time.rs  fuzz_printf.rs  fuzz_seq.rs  fuzz_seq_parse_number.rs  fuzz_sort.rs  fuzz_split.rs  fuzz_test.rs  fuzz_tr.rs  fuzz_wc.rs
fuzz/sgfuzz/: Cargo.toml  README.md
fuzz/uufuzz/: Cargo.toml
fuzz/uufuzz/src/: lib.rs
integration/emacs/: README.md  example.emacs  install.sh  stargate-script-mode.el  stargate-shell.el
src/common/: validation.rs
src/sg/append_file/: Cargo.toml
src/sg/append_file/src/: append_file.rs  main.rs
src/sg/change_group/: Cargo.toml
src/sg/change_group/locales/: en-US.ftl  fr-FR.ftl
src/sg/change_group/src/: change_group.rs  main.rs
src/sg/change_owner/: Cargo.toml
src/sg/change_owner/src/: change_owner.rs  main.rs
src/sg/collect-count/: Cargo.toml
src/sg/collect-count/benches/: collect_count_bench.rs
src/sg/collect-count/src/: collect_count.rs  collected_count.rs  count_fast.rs  countable.rs  main.rs
src/sg/collect-count/src/utf8/: read.rs
src/sg/date/: Cargo.toml
src/sg/date/src/: date.rs  main.rs
src/sg/df/: Cargo.toml
src/sg/df/src/: blocks.rs  columns.rs  df.rs  filesystem.rs  main.rs  table.rs
src/sg/dice_object/: Cargo.toml
src/sg/dice_object/src/: dice_object.rs  lib.rs  main.rs
src/sg/du/: Cargo.toml
src/sg/du/benches/: du_bench.rs
src/sg/du/src/: du.rs  main.rs
src/sg/env/: Cargo.toml
src/sg/env/src/: env.rs  main.rs  variable_parser.rs
src/sg/expand/: Cargo.toml
src/sg/expand/benches/: expand_bench.rs
src/sg/expand/src/: expand.rs  main.rs
src/sg/find-text/: Cargo.toml
src/sg/find-text/src/: find_text.rs  lib.rs  main.rs
src/sg/fold/: Cargo.toml
src/sg/fold/benches/: fold_bench.rs
src/sg/fold/src/: fold.rs  main.rs
src/sg/get_contents/: Cargo.toml
src/sg/get_contents/src/: get_contents.rs  splice.rs
src/sg/get_contents/src/platform/: mod.rs  unix.rs
src/sg/get_domainname/: Cargo.toml
src/sg/get_domainname/src/: get_domainname.rs  main.rs
src/sg/get_fqdn/: Cargo.toml
src/sg/get_fqdn/src/: get_fqdn.rs  main.rs
src/sg/get_hostname/: Cargo.toml
src/sg/get_hostname/locales/: en-US.ftl
src/sg/get_hostname/src/: get_hostname.rs  main.rs
src/sg/groups/: Cargo.toml
src/sg/groups/src/: groups.rs  main.rs
src/sg/head/: Cargo.toml
src/sg/head/src/: head.rs  main.rs  parse.rs  take.rs
src/sg/id/: Cargo.toml
src/sg/id/src/: id.rs  main.rs
src/sg/list_directory/: Cargo.toml
src/sg/list_directory/benches/: list_directory_bench.rs
src/sg/list_directory/src/: colors.rs  dired.rs  list-directory.rs  main.rs
src/sg/list_processes/: Cargo.toml
src/sg/list_processes/locales/: en-US.ftl
src/sg/list_processes/src/: lib.rs  list_processes.rs  main.rs
src/sg/mv/: Cargo.toml
src/sg/mv/benches/: mv_bench.rs
src/sg/mv/src/: error.rs  hardlink.rs  main.rs  mv.rs
src/sg/new_directory/: Cargo.toml
src/sg/new_directory/src/: main.rs  new_directory.rs
src/sg/nl/: Cargo.toml
src/sg/nl/benches/: nl_bench.rs
src/sg/nl/src/: helper.rs  main.rs  nl.rs
src/sg/pinky/: Cargo.toml
src/sg/pinky/src/: main.rs  pinky.rs
src/sg/pinky/src/platform/: openbsd.rs  unix.rs
src/sg/ps/: Cargo.toml
src/sg/ps/locales/: en-US.ftl
src/sg/ps/src/: lib.rs  main.rs  ps.rs
src/sgcore/: Cargo.toml  build.rs
src/sgcore_procs/: Cargo.toml
src/sgcore_procs/src/: lib.rs  object_converter.rs
src/uucore/: Cargo.toml  build.rs
stargate/: LICENSE  main.rs
stargate-language/: LICENSE-HEADER.sg  QUICK_REFERENCE.md  SPECIFICATION.md  test_bytecode.sg
stargate-language/benchmark/: bytecode_simple.sg
stargate-language/design-patterns/: README.md  adapter.sg  builder.sg  observer.sg  pizza_builder.sg  strategy.sg  template_method.sg
stargate-shell/: commands.rs  completion.rs  execution.rs  executor.rs  jobs.rs  parsing.rs  path_completion.rs  piped_input.rs  repl_handlers.rs  stargate_shell_main.rs  ui.rs
stargate-shell/builtin-commands/: describe_command.rs  foreground_job.rs  list_history.rs  list_jobs.rs  list_variables.rs
stargate-shell/bytecode/: compiler.rs  vm.rs
stargate_shellscripts/: INHERITANCE.md  README.md  advanced_objects.sg  advanced_pipelines_demo.sg  bool_conversion_demo.sg  builtin_unit_testing_framework.sg  class_methods_demo.sg  classes_demo.sg  command_output.sg  complex_logic.sg  conditional_pipelines.sg  conditionals.sg  dict_manipulation.sg  environment_demo.sg  error_handling_demo.sg  fibonacci.sg  for_loop_demo.sg  functions.sg  inheritance_advanced.sg  inheritance_demo.sg  list_manipulation.sg  logical_operators_demo.sg  logical_ops_advanced.sg  nested_conditions.sg  object_piping.sg  object_properties.sg  pipeline_builder.sg  practical_workflow.sg  property_completion_demo.sg  range_demo.sg  slice_and_dice_demo.sg  stargate_basic_scripting.sg  stargate_commands.sg  string_interpolation.sg  test_hashmap.sg  test_none.sg  test_path_execution.sg  test_readme_examples.sg  test_set.sg  type_checking_demo.sg  (+2 more)
tests/: test_localization_and_colors.rs  test_util_name.rs  tests.rs
tests/sgtests/: Cargo.toml
tests/sgtests/src/lib/: macros.rs  util.rs
util/: LICENSE  benchmark.py  build-gnu.sh  check-safe-traversal.sh  deps.nu  publish.sh  run-gnu-test.sh  update-version.sh
(+1464 files in other folders)
