# coreutils (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

# spell-checker:ignore (libs) bigdecimal datetime serde bincode kqueue mangen memmap uuhelp startswith constness expl unnested logind cfgs

[package]
name = "stargate"
description = "Stargate: UNIX userland written in Rust"
default-run = "stargate"
repository = "https://github.com/uutils/coreutils"
rust-version = "1.85.0"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["feat_common_core"]
## OS feature shortcodes
macos = ["feat_os_macos"]
unix = ["feat_os_unix"]
windows = ["feat_os_windows"]
## project-specific feature shortcodes
expensive_tests = []
# "test_risky_names" == enable tests that create problematic file names (would make a network share inaccessible to Windows, breaks SVN on Mac OS, etc.)
test_risky_names = []
# * only build `uudoc` when `--feature uudoc` is activated
uudoc = ["dep:clap_complete", "dep:clap_mangen", "dep:fluent-syntax", "dep:zip"]
## features
## Optional feature for stdbuf
# "feat_external_libstdbuf" == use an external libstdbuf.so for stdbuf instead of embedding it
feat_external_libstdbuf = ["stdbuf/feat_external_libstdbuf"]
# "feat_systemd_logind" == enable feat_systemd_logind support for utmpx replacement
feat_systemd_logind = [
  "pinky/feat_systemd_logind",
  "uptime/feat_systemd_logind",
  "users/feat_systemd_logind",
  "sgcore/feat_systemd_logind",
  "who/feat_systemd_logind",
]

# "feat_common_core" == baseline core set of utilities which can be built/run on most targets
feat_common_core = [
  "base32",
  "base64",
  "basename",
  "basenc",
  "get_contents",
  "cksum",
  "comm",
  "cp",
  "csplit",
  "cut",
  "get_date",
  "dd",
  "df",
  "dircolors",
  "dirname",
  "du",
  "echo",
  "get_environment",
  "expand",
  "expr",
  "factor",
  "false",
  "find_text",
  "fmt",
  "fold",
  "hashsum",
  "head",
  "join",
  "link",
  "ln",
  "list_directory",
  "new_directory",
  "mktemp",
  "more",
  "mv",
  "nl",
  "od",
  "paste",
  "pr",
  "printenv",
  "printf",
  "ptx",
  "pwd",
  "readlink",
  "realpath",
  "rm",
  "rmdir",
  "get_range",
  "shred",
  "shuf",
  "dice_object",
  "slice_object",
  "sleep",
  "sort",
  "split",
  "sum",
  "tac",
  "tail",
  "tee",
  "test",
  "touch",
  "tr",
  "true",
  "truncate",
  "tsort",
  "unexpand",
  "uniq",
  "unlink",
  "collect_count",
  "yes",
]
# "feat_Tier1" == expanded set of utilities which can be built/run on the usual rust "Tier 1" target platforms (ref: <https://forge.rust-lang.org/release/platform-support.html>)
feat_Tier1 = [
  "feat_common_core",
  #
  "get_architecture",
  "hostname",
  "get_hostname",
  "get_domainname",
  "get_fqdn",
  "nproc",
  "sync",
  "uname",
  "whoami",
]
## (primary platforms) feature sets
# "feat_os_macos" == set of utilities which can be built/run on the MacOS platform
feat_os_macos = [
  "feat_os_unix", ## == a modern/usual *nix platform
  #
]
# "feat_os_unix" == set of utilities which can be built/run on modern/usual *nix platforms.
feat_os_unix = [
  "feat_Tier1",
  #
  "feat_require_unix",
  "feat_require_unix_utmpx",
]
# "feat_os_unix_musl" == set of utilities which can be built/run on targets binding to the "musl" library (ref: <https://musl.libc.org/about.html>)
# It excludes stdbuf due to cdylib limitations (https://github.com/rust-lang/rust/issues/82193)
feat_os_unix_musl = [
  "feat_Tier1",
  #
  "feat_require_unix_musl",
  "feat_require_unix_utmpx",
]
feat_os_windows = [
  "feat_Tier1", ## == "feat_os_windows_legacy" + "hostname"
]
## (secondary platforms) feature sets
# "feat_os_unix_gnueabihf" == set of utilities which can be built/run on the "arm-unknown-linux-gnueabihf" target (ARMv6 Linux [hardfloat])
feat_os_unix_gnueabihf = [
  "feat_Tier1",
  #
  "feat_require_unix",
  "feat_require_unix_utmpx",
]
feat_os_unix_android = [
  "feat_Tier1",
  #
  "feat_require_unix",
]
## feature sets with requirements (restricting cross-platform availability)
#
# ** NOTE: these `feat_require_...` sets should be minimized as much as possible to encourage cross-platform availability of utilities
#
# "feat_require_unix" == set of utilities requiring support which is only available on unix platforms
feat_require_unix = ["feat_require_unix_core", "stdbuf"]
# "feat_require_unix_musl" == set of utilities requiring unix support, excluding stdbuf (cdylib not supported on musl)
feat_require_unix_musl = ["feat_require_unix_core"]
# "feat_require_unix_core" == core unix utilities (shared between regular unix and musl)
feat_require_unix_core = [
  "change_group",
  "chmod",
  "change_owner",
  "chroot",
  "groups",
  "id",
  "install",
  "kill",
  "get_username",
  "mkfifo",
  "mknod",
  "nice",
  "nohup",
  "pathchk",
  "stat",
  "stty",
  "timeout",
  "tty",
]
# "feat_require_unix_utmpx" == set of utilities requiring unix utmp/utmpx support
# * ref: <https://wiki.musl-libc.org/faq.html#Q:-Why-is-the-utmp/wtmp-functionality-only-implemented-as-stubs?>
feat_require_unix_utmpx = ["pinky", "uptime", "users", "who"]

# * bypass/override ~ translate 'test' feature name to avoid dependency collision with rust core 'test' crate (o/w surfaces as compiler errors during testing)
test = ["uu_test"]

[workspace]
resolver = "3"
members = [
  ".",
  "src/sg/*",
  "src/sg/stdbuf/src/libstdbuf",
  "src/sgcore",
  "src/sgcore_procs",
  "tests/uutests",
  # "fuzz",  # TODO
]

[workspace.package]
authors = ["uutils developers"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/uutils/coreutils"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
license = "MIT"
readme = "README.package.md"
version = "0.4.0"

[workspace.dependencies]
ansi-width = "0.1.0"
bigdecimal = "0.4"
binary-heap-plus = "0.5.0"
bstr = "1.9.1"
bytecount = "0.6.8"
byteorder = "1.5.0"
chrono = { version = "0.4.41", default-features = false, features = [
  "std",
  "alloc",
  "clock",
] }
clap = { version = "4.5", features = ["wrap_help", "cargo", "color"] }
clap_complete = "4.4"
clap_mangen = "0.2"
compare = "0.1.0"
crossterm = "0.29.0"
ctor = "0.6.0"
ctrlc = { version = "3.4.7", features = ["termination"] }
divan = { package = "codspeed-divan-compat", version = "4.0.5" }
dns-lookup = { version = "3.0.0" }
exacl = "0.12.0"
file_diff = "1.0.0"
filetime = "0.2.23"
fnv = "1.0.7"
fs_extra = "1.3.0"
fts-sys = "0.2.16"
gcd = "2.3"
glob = "0.3.1"
half = "2.4.1"
hostname = "0.4"
get_hostname = "0.4"
icu_collator = "2.0.0"
icu_decimal = "2.0.0"
icu_locale = "2.0.0"
icu_provider = "2.0.0"
indicatif = "0.18.0"
itertools = "0.14.0"
jiff = { version = "0.2.10", default-features = false, features = [
  "std",
  "alloc",
  "tz-system",
] }
libc = "0.2.172"
linux-raw-sys = "0.12"
lscolors = { version = "0.21.0", default-features = false, features = [
  "gnu_legacy",
] }
memchr = "2.7.2"
rustyline = "14.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9.4"
nix = { version = "0.30", default-features = false }
nom = "8.0.0"
notify = { version = "=8.2.0", features = ["macos_kqueue"] }
num-bigint = "0.4.4"
num-prime = "0.4.4"
num-traits = "0.2.19"
number_prefix = "0.4"
onig = { version = "~6.5.1", default-features = false }
parse_datetime = "0.13.0"
phf = "0.13.1"
phf_codegen = "0.13.1"
platform-info = "2.0.3"
procfs = "0.18"
rand = { version = "0.9.0", features = ["small_rng"] }
rand_core = "0.9.0"
rayon = "1.10"
regex = "1.10.4"
rstest = "0.26.0"
rust-ini = "0.21.0"
same-file = "1.0.6"
self_cell = "1.0.4"
# FIXME we use the exact version because the new 0.5.3 requires an MSRV of 1.88

signal-hook = "0.3.17"
tempfile = "3.15.0"
terminal_size = "0.4.0"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
thiserror = "2.0.3"
time = { version = "0.3.36" }
unicode-width = "0.2.0"
utmp-classic = "0.1.6"
uutils_term_grid = "0.7"
walkdir = "2.5"
winapi-util = "0.1.8"
windows-sys = { version = "0.61.0", default-features = false }
xattr = "1.3.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

hex = "0.4.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2b_simd = "1.0.2"
blake3 = "1.5.1"
sm3 = "0.4.2"
crc-fast = "1.5.0"
digest = "0.10.7"

# Fluent dependencies
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
fluent-syntax = "0.12.0"

sgcore = { version = "0.4.0", package = "sgcore", path = "src/sgcore" }
sgcore_procs = { version = "0.4.0", package = "sgcore_procs", path = "src/sgcore_procs" }
sg_list_directory = { version = "0.4.0", path = "src/sg/list_directory" }
sg_base32 = { version = "0.4.0", path = "src/sg/base32" }
uu_base32 = { version = "0.4.0", package = "sg_base32", path = "src/sg/base32" }
uutests = { version = "0.4.0", package = "uutests", path = "tests/uutests" }

[dependencies]
clap.workspace = true
clap_complete = { workspace = true, optional = true }
clap_mangen = { workspace = true, optional = true }
fluent-syntax = { workspace = true, optional = true }
phf.workspace = true
rustyline.workspace = true
serde_json.workspace = true

textwrap.workspace = true
sgcore.workspace = true
zip = { workspace = true, optional = true }


# * uutils
uu_test = { optional = true, version = "0.4.0", package = "sg_test", path = "src/sg/test" }
#
get_architecture = { optional = true, version = "0.4.0", package = "sg_get_architecture", path = "src/sg/get_architecture" }
base32 = { optional = true, version = "0.4.0", package = "sg_base32", path = "src/sg/base32" }
base64 = { optional = true, version = "0.4.0", package = "sg_base64", path = "src/sg/base64" }
basename = { optional = true, version = "0.4.0", package = "sg_basename", path = "src/sg/basename" }
basenc = { optional = true, version = "0.4.0", package = "sg_basenc", path = "src/sg/basenc" }
get_contents = { optional = true, version = "0.4.0", package = "sg_get_contents", path = "src/sg/get_contents" }
change_group = { optional = true, version = "0.4.0", package = "sg_change_group", path = "src/sg/change_group" }
chmod = { optional = true, version = "0.4.0", package = "sg_chmod", path = "src/sg/chmod" }
change_owner = { optional = true, version = "0.4.0", package = "sg_change_owner", path = "src/sg/change_owner" }
chroot = { optional = true, version = "0.4.0", package = "sg_chroot", path = "src/sg/chroot" }
cksum = { optional = true, version = "0.4.0", package = "sg_cksum", path = "src/sg/cksum" }
comm = { optional = true, version = "0.4.0", package = "sg_comm", path = "src/sg/comm" }
cp = { optional = true, version = "0.4.0", package = "sg_cp", path = "src/sg/cp" }
csplit = { optional = true, version = "0.4.0", package = "sg_csplit", path = "src/sg/csplit" }
cut = { optional = true, version = "0.4.0", package = "sg_cut", path = "src/sg/cut" }
get_date = { optional = true, version = "0.4.0", package = "sg_get_date", path = "src/sg/get_date" }
dd = { optional = true, version = "0.4.0", package = "sg_dd", path = "src/sg/dd" }
df = { optional = true, version = "0.4.0", package = "sg_df", path = "src/sg/df" }
dircolors = { optional = true, version = "0.4.0", package = "sg_dircolors", path = "src/sg/dircolors" }
dirname = { optional = true, version = "0.4.0", package = "sg_dirname", path = "src/sg/dirname" }
du = { optional = true, version = "0.4.0", package = "sg_du", path = "src/sg/du" }
echo = { optional = true, version = "0.4.0", package = "sg_echo", path = "src/sg/echo" }
get_environment = { optional = true, version = "0.4.0", package = "sg_get_environment", path = "src/sg/get_environment" }
expand = { optional = true, version = "0.4.0", package = "sg_expand", path = "src/sg/expand" }
expr = { optional = true, version = "0.4.0", package = "sg_expr", path = "src/sg/expr" }
factor = { optional = true, version = "0.4.0", package = "sg_factor", path = "src/sg/factor" }
false = { optional = true, version = "0.4.0", package = "sg_false", path = "src/sg/false" }
find_text = { optional = true, version = "0.4.0", package = "sg_find_text", path = "src/sg/find-text" }
fmt = { optional = true, version = "0.4.0", package = "sg_fmt", path = "src/sg/fmt" }
fold = { optional = true, version = "0.4.0", package = "sg_fold", path = "src/sg/fold" }
groups = { optional = true, version = "0.4.0", package = "sg_groups", path = "src/sg/groups" }
hashsum = { optional = true, version = "0.4.0", package = "sg_hashsum", path = "src/sg/hashsum" }
head = { optional = true, version = "0.4.0", package = "sg_head", path = "src/sg/head" }
hostname = { optional = true, version = "0.4.0", package = "sg_hostname", path = "src/sg/hostname" }
get_hostname = { optional = true, version = "0.4.0", package = "sg_get_hostname", path = "src/sg/get_hostname" }
get_domainname = { optional = true, version = "0.4.0", package = "sg_get_domainname", path = "src/sg/get_domainname" }
get_fqdn = { optional = true, version = "0.4.0", package = "sg_get_fqdn", path = "src/sg/get_fqdn" }
id = { optional = true, version = "0.4.0", package = "sg_id", path = "src/sg/id" }
install = { optional = true, version = "0.4.0", package = "sg_install", path = "src/sg/install" }
join = { optional = true, version = "0.4.0", package = "sg_join", path = "src/sg/join" }
kill = { optional = true, version = "0.4.0", package = "sg_kill", path = "src/sg/kill" }
link = { optional = true, version = "0.4.0", package = "sg_link", path = "src/sg/link" }
ln = { optional = true, version = "0.4.0", package = "sg_ln", path = "src/sg/ln" }
list_directory = { optional = true, version = "0.4.0", package = "sg_list_directory", path = "src/sg/list_directory" }
get_username = { optional = true, version = "0.4.0", package = "sg_get_username", path = "src/sg/get_username" }
new_directory = { optional = true, version = "0.4.0", package = "sg_new_directory", path = "src/sg/new_directory" }
mkfifo = { optional = true, version = "0.4.0", package = "sg_mkfifo", path = "src/sg/mkfifo" }
mknod = { optional = true, version = "0.4.0", package = "sg_mknod", path = "src/sg/mknod" }
mktemp = { optional = true, version = "0.4.0", package = "sg_mktemp", path = "src/sg/mktemp" }
more = { optional = true, version = "0.4.0", package = "sg_more", path = "src/sg/more" }
mv = { optional = true, version = "0.4.0", package = "sg_mv", path = "src/sg/mv" }
nice = { optional = true, version = "0.4.0", package = "sg_nice", path = "src/sg/nice" }
nl = { optional = true, version = "0.4.0", package = "sg_nl", path = "src/sg/nl" }
nohup = { optional = true, version = "0.4.0", package = "sg_nohup", path = "src/sg/nohup" }
nproc = { optional = true, version = "0.4.0", package = "sg_nproc", path = "src/sg/nproc" }
od = { optional = true, version = "0.4.0", package = "sg_od", path = "src/sg/od" }
paste = { optional = true, version = "0.4.0", package = "sg_paste", path = "src/sg/paste" }
pathchk = { optional = true, version = "0.4.0", package = "sg_pathchk", path = "src/sg/pathchk" }
pinky = { optional = true, version = "0.4.0", package = "sg_pinky", path = "src/sg/pinky" }
pr = { optional = true, version = "0.4.0", package = "sg_pr", path = "src/sg/pr" }
printenv = { optional = true, version = "0.4.0", package = "sg_printenv", path = "src/sg/printenv" }
printf = { optional = true, version = "0.4.0", package = "sg_printf", path = "src/sg/printf" }
ptx = { optional = true, version = "0.4.0", package = "sg_ptx", path = "src/sg/ptx" }
pwd = { optional = true, version = "0.4.0", package = "sg_pwd", path = "src/sg/pwd" }
readlink = { optional = true, version = "0.4.0", package = "sg_readlink", path = "src/sg/readlink" }
realpath = { optional = true, version = "0.4.0", package = "sg_realpath", path = "src/sg/realpath" }
rm = { optional = true, version = "0.4.0", package = "sg_rm", path = "src/sg/rm" }
rmdir = { optional = true, version = "0.4.0", package = "sg_rmdir", path = "src/sg/rmdir" }

get_range = { optional = true, version = "0.4.0", package = "sg_get_range", path = "src/sg/get_range" }
shred = { optional = true, version = "0.4.0", package = "sg_shred", path = "src/sg/shred" }
shuf = { optional = true, version = "0.4.0", package = "sg_shuf", path = "src/sg/shuf" }
dice_object = { optional = true, version = "0.4.0", package = "sg_dice_object", path = "src/sg/dice_object" }
slice_object = { optional = true, version = "0.4.0", package = "sg_slice_object", path = "src/sg/slice_object" }
sleep = { optional = true, version = "0.4.0", package = "sg_sleep", path = "src/sg/sleep" }
sort = { optional = true, version = "0.4.0", package = "sg_sort", path = "src/sg/sort" }
split = { optional = true, version = "0.4.0", package = "sg_split", path = "src/sg/split" }
stat = { optional = true, version = "0.4.0", package = "sg_stat", path = "src/sg/stat" }
stdbuf = { optional = true, version = "0.4.0", package = "sg_stdbuf", path = "src/sg/stdbuf" }
stty = { optional = true, version = "0.4.0", package = "sg_stty", path = "src/sg/stty" }
sum = { optional = true, version = "0.4.0", package = "sg_sum", path = "src/sg/sum" }
sync = { optional = true, version = "0.4.0", package = "sg_sync", path = "src/sg/sync" }
tac = { optional = true, version = "0.4.0", package = "sg_tac", path = "src/sg/tac" }
tail = { optional = true, version = "0.4.0", package = "sg_tail", path = "src/sg/tail" }
tee = { optional = true, version = "0.4.0", package = "sg_tee", path = "src/sg/tee" }
timeout = { optional = true, version = "0.4.0", package = "sg_timeout", path = "src/sg/timeout" }
touch = { optional = true, version = "0.4.0", package = "sg_touch", path = "src/sg/touch" }
tr = { optional = true, version = "0.4.0", package = "sg_tr", path = "src/sg/tr" }
true = { optional = true, version = "0.4.0", package = "sg_true", path = "src/sg/true" }
truncate = { optional = true, version = "0.4.0", package = "sg_truncate", path = "src/sg/truncate" }
tsort = { optional = true, version = "0.4.0", package = "sg_tsort", path = "src/sg/tsort" }
tty = { optional = true, version = "0.4.0", package = "sg_tty", path = "src/sg/tty" }
uname = { optional = true, version = "0.4.0", package = "sg_uname", path = "src/sg/uname" }
unexpand = { optional = true, version = "0.4.0", package = "sg_unexpand", path = "src/sg/unexpand" }
uniq = { optional = true, version = "0.4.0", package = "sg_uniq", path = "src/sg/uniq" }
unlink = { optional = true, version = "0.4.0", package = "sg_unlink", path = "src/sg/unlink" }
uptime = { optional = true, version = "0.4.0", package = "sg_uptime", path = "src/sg/uptime" }
users = { optional = true, version = "0.4.0", package = "sg_users", path = "src/sg/users" }
collect_count = { optional = true, version = "0.4.0", package = "sg_collect_count", path = "src/sg/collect-count" }
who = { optional = true, version = "0.4.0", package = "sg_who", path = "src/sg/who" }
whoami = { optional = true, version = "0.4.0", package = "sg_whoami", path = "src/sg/whoami" }
yes = { optional = true, version = "0.4.0", package = "sg_yes", path = "src/sg/yes" }

# this breaks clippy linting with: "tests/by-util/test_factor_benches.rs: No such file or directory (os error 2)"
# factor_benches = { optional = true, version = "0.0.0", package = "sg_factor_benches", path = "tests/benches/factor" }

#
# * pinned transitive dependencies
# Not needed for now. Keep as examples:
#pin_cc = { version="1.0.61, < 1.0.62", package="cc" } ## cc v1.0.62 has compiler errors for MinRustV v1.32.0, requires 1.34 (for `std::str::split_ascii_whitespace()`)

[dev-dependencies]
chrono.workspace = true
ctor.workspace = true
filetime.workspace = true
glob.workspace = true
libc.workspace = true
num-prime.workspace = true
pretty_assertions = "1.4.0"
rand.workspace = true
regex.workspace = true
sha1 = { workspace = true, features = ["std"] }
tempfile.workspace = true
time = { workspace = true, features = ["local-offset"] }
unindent = "0.2.3"
uutests.workspace = true
sgcore = { workspace = true, features = [
  "mode",
  "entries",
  "process",
  "signals",
  "utmpx",
] }
walkdir.workspace = true
hex-literal = "1.0.0"
rstest.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true, features = [
  "process",
  "signal",
  "socket",
  "user",
  "term",
] }
rlimit = "0.10.1"
xattr.workspace = true

# Used in test_uptime::test_uptime_with_file_containing_valid_boot_time_utmpx_record
# to deserialize an utmpx struct into a binary file
[target.'cfg(all(target_family= "unix",not(target_os = "macos")))'.dev-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde-big-array = "0.5.1"


[build-dependencies]
phf_codegen.workspace = true

[[bin]]
name = "stargate"
path = "src/bin/stargate.rs"

[[bin]]
name = "stargate-shell"
path = "src/bin/stargate_shell_main.rs"

[[bin]]
name = "uudoc"
path = "src/bin/uudoc.rs"
required-features = ["uudoc"]

# The default release profile with some optimizations.
[profile.release]
lto = true
panic = "abort"

[profile.release-fast]
inherits = "release"
codegen-units = 1

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release-fast"
opt-level = "z"
strip = true

# A release-like profile with debug info for profiling.
# See https://github.com/mstange/samply .
[profile.profiling]
inherits = "release"
panic = "unwind"
debug = true

[lints]
workspace = true

# This is the linting configuration for all crates.
# In order to use these, all crates have `[lints] workspace = true` section.
[workspace.lints.rust]
# Allow "fuzzing" as a "cfg" condition name
# https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
#unused_qualifications = "warn" // TODO: fix warnings in sgcore, then re-enable this lint

[workspace.lints.clippy]
# The counts were generated with this command:
#   cargo clippy --all-targets --workspace --message-format=json --quiet \
#     | jq -r '.message.code.code | select(. != null and startswith("clippy::"))' \
#     | sort | uniq -c | sort -h -r
#
# TODO:
#  remove large_stack_arrays when https://github.com/rust-lang/rust-clippy/issues/13774 is fixed
#
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
use_self = "warn"                            # nursery lint
cargo_common_metadata = "allow"              # 3240
multiple_crate_versions = "allow"            # 2882
missing_errors_doc = "allow"                 # 1572
missing_panics_doc = "allow"                 # 946
must_use_candidate = "allow"                 # 322
match_same_arms = "allow"                    # 204
redundant_closure_for_method_calls = "allow" # 125
cast_possible_truncation = "allow"           # 122
too_many_lines = "allow"                     # 101
trivially_copy_pass_by_ref = "allow"         # 84
single_match_else = "allow"                  # 82
cast_possible_wrap = "allow"                 # 78
cast_sign_loss = "allow"                     # 70
struct_excessive_bools = "allow"             # 68
cast_precision_loss = "allow"                # 52
cast_lossless = "allow"                      # 35
unnecessary_wraps = "allow"                  # 33
ignored_unit_patterns = "allow"              # 21
similar_names = "allow"                      # 20
large_stack_arrays = "allow"                 # 20
wildcard_imports = "allow"                   # 18
used_underscore_binding = "allow"            # 18
needless_pass_by_value = "allow"             # 16
float_cmp = "allow"                          # 12
items_after_statements = "allow"             # 11
return_self_not_must_use = "allow"           # 8
needless_continue = "allow"                  # 6
inline_always = "allow"                      # 6
fn_params_excessive_bools = "allow"          # 6
used_underscore_items = "allow"              # 2
should_panic_without_expect = "allow"        # 2

doc_markdown = "allow"
unused_self = "allow"
map_unwrap_or = "allow"
enum_glob_use = "allow"
ptr_cast_constness = "allow"
borrow_as_ptr = "allow"
ptr_as_ptr = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal = "allow"
unnested_or_patterns = "allow"
implicit_hasher = "allow"
struct_field_names = "allow"
doc_link_with_quotes = "allow"
format_push_string = "allow"
flat_map_option = "allow"
from_iter_instead_of_collect = "allow"
large_types_passed_by_value = "allow"
